--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
+    "remote-redux-devtools": "^0.5.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
