--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -287,6 +287,10 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation 'com.facebook.fresco:fresco:2.6.0'
+    implementation 'com.facebook.fresco:animated-gif:2.6.0'
+
 }
 
 if (isNewArchitectureEnabled()) {
